--- a/packages/larapen/texttoimage/composer.json
+++ b/packages/larapen/texttoimage/composer.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "authors": [
 	{
-	  "name": "Hps",
-	  "email": "contact@hps.com"
+	  "name": "Mimid",
+	  "email": "contact@mimid.com"
 	}
   ],
   "minimum-stability": "stable",
